# ergolog

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_colors.md  demo.ipynb  demo.py  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
lode/: lode-map.md  practices.md  summary.md  terminology.md
lode/core/: config.md  summary.md
src/ergolog/: __init__.py  ergolog.py
test/: conftest.py  main.py  test_basic.py  test_composition.py  test_config.py  test_counter.py  test_event.py  test_exceptions.py  test_threading.py
