[project]
name = "ergolog"
version = "0.2.0"
description = "A minimal, ergonomic python logging wrapper"
readme = "README.md"
authors = [{ name = "David Kincaid", email = "daelonsuzuka@gmail.com" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/DaelonSuzuka/ergolog"
Documentation = "https://github.com/DaelonSuzuka/ergolog"
Repository = "https://github.com/DaelonSuzuka/ergolog"
Issues = "https://github.com/DaelonSuzuka/ergolog/issues"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
